--- a/HairApp.Web/HairApp.Web.csproj
+++ b/HairApp.Web/HairApp.Web.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\HairApp.Common\HairApp.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
