--- a/HairApp.Web/HairApp.Web.csproj
+++ b/HairApp.Web/HairApp.Web.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>33af29b8-4f5a-40c8-ba33-132bb184e0d2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
